@@ -251,13 +251,7 @@
     (function in-package
       (lambda (form env)
         (declare (ignore env))
-        (let ((package-name (cadr form)))
-          (cond ((stringp package-name))
-                ((symbolp package-name)
-                 (setq package-name (symbol-name package-name)))
-                (t (error-of-type 'source-program-error
-                     (TEXT "~S: argument ~S should be a string or a symbol")
-                     'common-lisp:in-package package-name)))
+        (let ((package-name (string (cadr form))))
           (list 'EVAL-WHEN '(COMPILE LOAD EVAL)
                 (list 'SETQ 'COMMON-LISP::*PACKAGE*
                       (list 'SYS::%FIND-PACKAGE package-name))))))))
